[gd_scene load_steps=8 format=3 uid="uid://bug0yaria2e8v"]

[ext_resource type="Script" uid="uid://cdarq4a0wqwtg" path="res://scripts/statistics/statistics.gd" id="1_uxagb"]
[ext_resource type="Script" uid="uid://cuc1p3kttg5sg" path="res://scripts/statistics/main/statistics_menu.gd" id="2_3e0gv"]
[ext_resource type="Script" uid="uid://mr1d4fbcfac2" path="res://scripts/statistics/content/overview_scroll.gd" id="2_plxw2"]
[ext_resource type="Script" uid="uid://bp3mevgfewag2" path="res://scripts/statistics/content/performance_scroll.gd" id="4_lswhq"]
[ext_resource type="Script" uid="uid://bbosj0ya5yfr8" path="res://scripts/statistics/content/time_scroll.gd" id="5_purwj"]
[ext_resource type="Script" uid="uid://dc4xibx88p4wb" path="res://scripts/statistics/content/courses_scroll.gd" id="6_k4cce"]
[ext_resource type="Script" uid="uid://b0hnmc0t1dxqu" path="res://scripts/statistics/main/statistics_confirm.gd" id="7_lswhq"]

[node name="Statistics" type="GridContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -316.5
offset_right = 249.0
offset_bottom = 316.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxagb")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Statistics"
horizontal_alignment = 1

[node name="Menu" type="GridContainer" parent="."]
layout_mode = 2
columns = 2
script = ExtResource("2_3e0gv")

[node name="Overview" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Overview"

[node name="Performance" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Performance"

[node name="Time" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time"

[node name="Courses" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Courses"

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OverviewScroll" type="ScrollContainer" parent="Content"]
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("2_plxw2")

[node name="VBox" type="VBoxContainer" parent="Content/OverviewScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PerformanceScroll" type="ScrollContainer" parent="Content"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("4_lswhq")

[node name="VBox" type="VBoxContainer" parent="Content/PerformanceScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TimeScroll" type="ScrollContainer" parent="Content"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("5_purwj")

[node name="VBox" type="VBoxContainer" parent="Content/TimeScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Option" type="HBoxContainer" parent="Content/TimeScroll/VBox"]
layout_mode = 2

[node name="Course" type="OptionButton" parent="Content/TimeScroll/VBox/Option"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 8
popup/item_0/text = "Manajemen Proyek Perangkat Lunak"
popup/item_0/id = 0
popup/item_1/text = "Jaringan Komputer"
popup/item_1/id = 1
popup/item_2/text = "Keamanan Siber"
popup/item_2/id = 2
popup/item_3/text = "Pemrograman Web 1"
popup/item_3/id = 3
popup/item_4/text = "Mobile Programming"
popup/item_4/id = 4
popup/item_5/text = "Metodologi Riset"
popup/item_5/id = 5
popup/item_6/text = "Computer Vision"
popup/item_6/id = 6
popup/item_7/text = "Pengolahan Citra Digital"
popup/item_7/id = 7

[node name="Spacer" type="Control" parent="Content/TimeScroll/VBox/Option"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SessionMode" type="OptionButton" parent="Content/TimeScroll/VBox/Option"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Quizizz Mode"
popup/item_0/id = 0
popup/item_1/text = "Elearning Mode"
popup/item_1/id = 1

[node name="CoursesScroll" type="ScrollContainer" parent="Content"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("6_k4cce")

[node name="VBox" type="VBoxContainer" parent="Content/CoursesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Option" type="HBoxContainer" parent="Content/CoursesScroll/VBox"]
layout_mode = 2

[node name="Course" type="OptionButton" parent="Content/CoursesScroll/VBox/Option"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 8
popup/item_0/text = "Manajemen Proyek Perangkat Lunak"
popup/item_0/id = 0
popup/item_1/text = "Jaringan Komputer"
popup/item_1/id = 1
popup/item_2/text = "Keamanan Siber"
popup/item_2/id = 2
popup/item_3/text = "Pemrograman Web 1"
popup/item_3/id = 3
popup/item_4/text = "Mobile Programming"
popup/item_4/id = 4
popup/item_5/text = "Metodologi Riset"
popup/item_5/id = 5
popup/item_6/text = "Computer Vision"
popup/item_6/id = 6
popup/item_7/text = "Pengolahan Citra Digital"
popup/item_7/id = 7

[node name="Spacer" type="Control" parent="Content/CoursesScroll/VBox/Option"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SessionMode" type="OptionButton" parent="Content/CoursesScroll/VBox/Option"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Quizizz Mode"
popup/item_0/id = 0
popup/item_1/text = "Elearning Mode"
popup/item_1/id = 1

[node name="Confirm" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2
script = ExtResource("7_lswhq")

[node name="Close" type="Button" parent="Confirm"]
layout_mode = 2
text = "Close"
